<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical"
  android:id="@+id/layout_root" >

	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addfavouritedialog_enter_stop_name"></TextView>
	<EditText android:hint="@string/addfavouritedialog_stop_name" android:id="@+id/favstopname" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addfavouritedialog_enter_stop_number"></TextView>
	<EditText android:layout_height="wrap_content" android:id="@+id/favstopnumber" android:hint="@string/addfavouritedialog_stop_number" android:layout_width="fill_parent"></EditText>

</LinearLayout>
